made JSON GUI codebase compilable